--- a/cucumber.opam
+++ b/cucumber.opam
@@ -6,12 +6,14 @@ homepage: "https://github.com/cucumber/cucumber.ml"
 bug-reports: "https://github.com/cucumber/cucumber.ml/issues"
 maintainer: "Christopher Yocum <cyocum@gmail.com>"
 build: [
-       [make "build_library"]
+       ["jbuilder" "build" "-p" name "-j" jobs]
 ]
-install: [make "install_library"]
-remove: ["ocamlfind" "remove" "cucumber"]
+install: ["jbuilder" "install" "cucumber"]
+remove: ["jbuilder" "uninstall"]
 depends: [
   "re" {= "1.7.3"}
   "base" {= "0.11.0"}
   "cmdliner" {= "1.0.2"}
+  "jbuilder" {build & >= "1.0+beta18.1"}
 ]
+available: [ocaml-version >= "4.02.3"]
