--- a/cucumber.opam
+++ b/cucumber.opam
@@ -14,6 +14,6 @@ depends: [
   "re" {= "1.7.3"}
   "base" {= "0.11.0"}
   "cmdliner" {= "1.0.2"}
-  "jbuilder" {build & >= "1.0+beta18.1"}
+  "dune" {build & >= "1.0.0"}
 ]
 available: [ocaml-version >= "4.02.3"]
