--- a/lib/dune
+++ b/lib/dune
@@ -12,9 +12,9 @@
 
 (library
 	(name cucumber)
+	(public_name cucumber)
 	(libraries cmdliner re re.perl base)
 	(synopsis "BDD style testing for OCaml")
 	(foreign_archives gherkin-c)
-	(foreign_stubs (language c) (names gherkin_intf))
-	(public_name cucumber))
+	(foreign_stubs (language c) (names gherkin_intf)))
 
