--- a/cucumber.opam
+++ b/cucumber.opam
@@ -10,9 +10,9 @@ homepage: "https://github.com/cucumber/cucumber.ml"
 bug-reports: "https://github.com/cucumber/cucumber.ml/issues"
 depends: [
   "dune" {>= "2.6" & >= "2.6"}
-  "re" {= "1.9.0"}
-  "base" {= "0.14.0"}
-  "cmdliner" {= "1.0.2"}
+  "re" {>= "1.9.0"}
+  "base" {>= "v0.14.0"}
+  "cmdliner" {>= "1.0.4"}
 ]
 build: [
   ["dune" "subst"] {pinned}
