--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/gherkin-c"]
 	path = lib/gherkin-c
-	url = git://github.com/cucumber/gherkin-c.git
+	url = https://github.com/cucumber/gherkin.git
