--- a/.github/workflows/cucumber-ocaml.yml
+++ b/.github/workflows/cucumber-ocaml.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-12
-          - ubuntu-22.04
+          - macos-latest
+          - ubuntu-latest
 
         ocaml-compiler:
           # Test the oldest OCaml version and the two newest versions.
